tests/testcases/invalid/semantic/91_increment_ternary_result.ciel
// Error: increment ternary expression result (rvalue)
int main() {
    int a = 5;
    int b = 10;
    int c = 1;

    // Error: ternary expression returns rvalue
    (c ? a : b)++;

    return 0;
}
